--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -59,7 +59,7 @@ spec:
         - name: PODINFO_UI_COLOR
           value: "#34577c"
         - name: PODINFO_UI_MESSAGE
-          value: "Welcome to flex my friend"
+          value: "Welcome to flex my friend, its awesome !!!"
         livenessProbe:
           httpGet:
             path: /healthz
